--- a/index.ipynb
+++ b/index.ipynb
@@ -35,17 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "def exp_pdf(mu, x):\n",
-    "    pass\n",
+    "    decay_rate = 1 / mu\n",
+    "    return decay_rate * np.exp(-decay_rate * x)\n",
     "    \n",
     "def exp_cdf(mu, x):\n",
-    "    pass"
+    "    decay_rate = 1 / mu\n",
+    "    return 1 - np.exp(-decay_rate * x)"
    ]
   },
   {
@@ -61,11 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7442708400868994"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "exp_cdf(22,30)\n",
     " # Expected Output: 0.7442708400868994"
    ]
   },
@@ -84,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "e\n",
     "# Expected Output: 0.00958241148834099"
    ]
   },
@@ -183,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
