--- a/index.ipynb
+++ b/index.ipynb
@@ -93,23 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'e' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-53532698fd2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# Expected Output: 0.00958241148834099\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'e' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.00958241148834099"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp_pdf(4)\n",
+    "exp_pdf(44,38)\n",
     "# Expected Output: 0.00958241148834099"
    ]
   },
@@ -128,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "exp_\n",
     "# Expected Output: 0.7364028618842733"
    ]
   },
